# spotify-api-app

./: .env  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  discord.yml
src/: main.py
test/: test.py
